[project]
name = "spo-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-identity>=1.19.0",
    "msgraph-sdk>=1.14.0",
    "fastapi[standard]>=0.115.6",
    "pydantic>=2.10.3",
    "httpx>=0.28.1",
    "pydantic-settings>=2.6.1",
]
